# models/car_master.go
@@ -23,6 +23,10 @@ type Car_master struct {
 
 type CarType string
 
+func (c *Car_master) TableName() string {
+    return "cars"
+}
+
 const (
 	Sedan     CarType = "sedan"
 	Hatchback CarType = "hatchback"
