# models/message.go
@@ -1,0 +1,10 @@
+package models
+
+type OTP struct {
+	PhoneNumber string `json:"phone_number"`
+}
+
+type VerifyData struct {
+	User string `json:"user,omitempty"`
+	Code string `json:"code,omitempty"`
+}
